# PARE

./: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  workers.yaml
docs/: frida-quickstart.md
docs/superpowers/: 2026-07-01-local-above-class-model-strategy.md
docs/walkthroughs/: omtg-datast-001-keystore.md
pare/: __init__.py  __main__.py  agent.py  capture_store.py  cli.py  config.py  handback.py  repeat_guard.py
pare/commands/: __init__.py  _frida.py  _snapshot_render.py  frida_actions.py  frida_views.py  health.py  snapshot.py
pare/prompts/: system.md
pare/tools/: __init__.py  _http.py  read_vault_doc.py  static_analyze.py
scripts/: init-agent.sh
systemd/: pare-daemon.service  {{agent_name}}-daemon.service
tests/: test_agent_capture_wiring.py  test_apk_re_agents_client.py  test_capture_store_manager.py  test_cli.py  test_commands_metadata.py  test_config.py  test_disabled_builtins.py  test_fast_path_registered.py  test_frida_actions_commands.py  test_frida_command_helper.py  test_frida_views_commands.py  test_frida_wire_tier_e2e.py  test_handback.py  test_handback_schema.py  test_handle_chat.py  test_handle_command.py  test_health.py  test_phase1_smoke.py  test_phase3_smoke.py  test_pin_coverage.py  test_read_vault_doc.py  test_register_tools.py  test_register_tools_reconnect.py  test_repeat_guard.py  test_risk_overrides_coverage.py  test_risk_overrides_wired.py  test_smoke.py  test_snapshot_command.py  test_snapshot_render.py  test_static_analyze.py  test_system_prompt.py
{{agent_pkg}}/: __init__.py  __main__.py  agent.py
(+28 files in other folders)
