[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "{{AGENT_NAME}}"
version = "0.1.0"
description = "{{AGENT_DESCRIPTION}}"
requires-python = ">=3.12"
dependencies = [
    "agent_core @ git+https://github.com/EdibleTuber/agent_core.git@v0.7.0",
]

[project.scripts]
{{AGENT_NAME}}-daemon = "{{agent_pkg}}.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
