[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pare"
version = "0.1.0"
description = "Personal Agentic Reverse Engineer — conversational mobile RE operator."
requires-python = ">=3.12"
dependencies = [
    "agent_core @ git+https://github.com/EdibleTuber/agent_core.git@v1.7.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
]

[project.scripts]
pare-daemon = "pare.__main__:main"
pare-cli = "pare.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
